--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,9 +3,12 @@ global:
   evaluation_interval: 5s
 
 scrape_configs:
+  - job_name: "prometheus"
+    static_configs:
+      - targets: ["localhost:9090"]
+
   - job_name: "api-gateway"
     static_configs:
       - targets: ["host.docker.internal:8080"]
-    metrics_path: "/admin/metrics"
-    params:
-      format: ["prometheus"]
+    metrics_path: "/metrics"  # Changed from /admin/metrics
+    scrape_interval: 2s
